--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -3,6 +3,13 @@
     padding: 0;
     list-style: none;
     display: flex;
+    flex-flow: column; /*Shorthand for flew-direction and flew-wrap properties */
     align-items: center;
     height: 100%;
+}
+
+@media (min-width: 500px) {
+    .NavigationItems {
+        flex-flow: row;
+    }
 }
