--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -8,6 +8,7 @@
     padding: 16px;
     left: 15%;
     top: 30%;
+    /* Maybe margin auto? */
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
